--- a/src/modules/PostForm/components/PostForm.scss
+++ b/src/modules/PostForm/components/PostForm.scss
@@ -5,12 +5,14 @@
   &__title{
     margin: 0px 0px 40px;
   }
-  form{
-    width: 40%;
-    text-align: center;
-    margin: 0 auto;
-    .form-group{
-      margin-bottom: 40px;
+  @at-root {
+    form{
+      width: 40%;
+      text-align: center;
+      margin: 0 auto;
+      .form-group{
+        margin-bottom: 40px;
+      }
     }
   }
 }
