--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -2,6 +2,12 @@
 {
   flex-basis: 45%;
   margin-bottom: 80px;
+  border: 1px solid #626262;
+  border-radius: 10px;
+  overflow: hidden;
+  -webkit-box-shadow: 5px 0px 5px 2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 5px 0px 5px 2px rgba(0,0,0,0.75);
+  box-shadow: 5px 0px 5px 2px rgba(0,0,0,0.75);
   .post{
     &__image{
       margin-bottom: 25px;
@@ -15,6 +21,9 @@
         text-decoration: none;
         color: #626262;
       }
+    }
+    &__content{
+      padding: 15px;
     }
   }
 }
